fix: allow any authenticated user to view patient details